--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,7 @@
             "role": "Developer"
         }
     ],
-    
-    "prefer-stable": true,
-    "minimum-stability": "dev",
-    
+
     "require": {
       "php": "^7.4"
     },
@@ -30,7 +27,7 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.4@dev"
     }
 }
 
